# libmat

./: .gitmodules  Makefile.am  README.md  README.org  bootstrap.mk  configure.ac
codegen/: makefile
codegen/generator/: pi.py
src/tests/: test_cmatrix.cc  test_tmatrix.cc
submodules/: makefile
